# cpgenius

./: .env.example  .gitignore  README.md  architecture.md  package-lock.json  pyproject.toml  tmux_run_all  tmux_terminate  tmuxtest_run
app/: check_before_run.py  config.py  schemas.py  start_fastapi.py
app/algorithms/: README.md  anova_ftest.py  dummy_classifier.py  garsen_olden_mlp.py  lasso_logistic_regression.py  post_borda.py  random_forest_varimp.py  rfe_svm.py  ridge_l2.py  shap_xgboost.py  workflow.py
app/celery_tasks/: bval_tasks.py  celery.py  dmp_tasks.py  fs_tasks.py  task_analyze_bvals_csv.py
app/cpg2gene/: README.md  cpg_gene_mapping.py
app/dimensionality_reduction/: pca.py
app/routers/: .fs_router.py.swp  bval_router.py  dmp_router.py  docs.py  fs_router.py  html.py  util.py
app/services/: dmp_run.py  get_algorithms.py  get_task_status.py  prognosis_values_from_csv.py  service_upload_beta_csv.py
app/utils/: algorithm_utils.py  file_utils.py  get_metadata.py  helpers.py  json_utils.py
docker/fake_container/: Dockerfile  README.md  rename.sh
docker/r-functions/: .Rhistory  Dockerfile  README.md  (+4 more)
docs/: ARCHITECTURE.md  PROGNOSIS_API.md  architecture.md  computational_methods.md  faq.md  file_upload_api.md  overview.md
pkl/: README.md  create_pkl.py
templates/: bval.html  dmp.html  doc.html  enrich.html  feature_selection.html  genesel.html  help.html  index.html  sha_1_file_tester.html  under_development.html
test_files/: prognosis_test.csv  sample.csv  sample.idat
tests/: test_cpg_gene_mapping.py  test_csv_memory.py  test_utils.py
(+16 files in other folders)
